# suitesparse

./: README.md  build.bash
addons/AMD/: configure.ac
addons/AMD/Doc/: Makefile.am
addons/AMD/Source/: Makefile.am
addons/BTF/: configure.ac
addons/BTF/Source/: Makefile.am
addons/CAMD/: configure.ac
addons/CAMD/Source/: Makefile.am
addons/CCOLAMD/: configure.ac
addons/CCOLAMD/Source/: Makefile.am
addons/CHOLMOD/: Makefile.am  configure.ac
addons/CHOLMOD/Doc/: Makefile.am
addons/CHOLMOD/GPU/: Makefile.am
addons/CHOLMOD/Include/: Makefile.am
addons/CHOLMOD/Supernodal/: Makefile.am
addons/COLAMD/: configure.ac
addons/COLAMD/Source/: Makefile.am
addons/CXSparse/: configure.ac
addons/CXSparse/Source/: Makefile.am
addons/KLU/: configure.ac
addons/KLU/Source/: Makefile.am
addons/LDL/: configure.ac
addons/LDL/Source/: Makefile.am
addons/RBio/: configure.ac
addons/RBio/Source/: Makefile.am
addons/SPQR/: Makefile.am  configure.ac
addons/SPQR/Source/: Makefile.am
addons/SuiteSparse_config/: Makefile.am  configure.ac
addons/UMFPACK/: configure.ac
addons/UMFPACK/Doc/: Makefile.am
addons/UMFPACK/Source/: Makefile.am
